frontend/css/panels/sequences.scss
@use "../variables" as *;
@use "sass:color";

.sequence-page {
  max-width: unset;
  padding: 8.6rem 0rem 0;
  .sequences-page-grid {
    grid-template-columns: 1fr 2fr 1fr;
    align-items: stretch;
    gap: 0;
  }
  .sequence-steps {
    margin-right: 0;
  }
}

.designer-sequence-list-panel {
  .panel-content {
    a {
      text-decoration: none !important;
      p {
        font-size: 1.4rem;
        font-weight: normal !important;
      }
    }
    .folders-panel {
      margin-left: -1rem;
      margin-right: -1rem;
    }
  }
}

.designer-sequence-editor-panel {
  .panel-header {
    color: $dark_gray;
  }
  .panel-content {
    .sequence-editor-content {
      overflow: hidden;

      @media screen and (max-width: 767px) {
        margin-left: 5px;
        padding-right: 0;
      }
    }
    .add-command-button-container {
      display: block;
      height: 0;
      .bp6-collapse {
        padding: 0;
      }
      .bp6-collapse-body {
        padding: 0;
      }
    }
    .drag-drop-area {
      display: none;
    }
    label {
      margin-top: 0;
    }

    @media screen and (max-width: 767px) {
      padding: 0;
    }
  }
}

.sequence-editor-panel {
  background: var(--main-bg);
  height: calc(100vh - 8.5rem);
  overflow: scroll;

  @media screen and (max-width: 767px) {
    display: none;
    &.open {
      display: block;
      &.inserting-item,
      &.inserting-step {
        display: none;
      }
    }
  }
  h3 {
    margin-top: 1rem;
  }
  .bp6-popover-target .saucer {
    float: left;
  }

  @media screen and (max-width: 767px) {
    h3,
    p {
      margin-left: 15px;
      margin-right: 15px;
    }
    h3 {
      max-width: 60%;
      margin-left: 0;
      margin-right: 0;
      margin-bottom: 2.5rem;
      padding-left: 0 !important;
    }
  }
  .sequence-editor-content {
    .sequence-description {
      .description-input {
        padding-right: 1rem;
      }
      a {
        text-decoration: underline !important;
      }
    }
  }
}

.farm-event-form-content,
.designer-regimen-editor-panel,
.sequence-editor-panel {
  .sequence-section-header {
    &:hover {
      background: $translucent1 !important;
    }
  }
}

.farm-event-form-content {
  .sequence-section-header {
    margin-left: -1rem;
    margin-right: -1rem;
    margin-top: 1rem;
    height: 4rem;
    .fa-caret-up,
    .fa-caret-down,
    label {
      margin-top: 0;
      line-height: 4rem;
    }
    &:hover {
      background: color.adjust($panel_light_yellow, $lightness: -10%) !important;
    }
  }
}

.sequence-editor-content,
.regimen-editor-content {
  @media screen and (max-width: 767px) {
    margin-left: 5px;
    margin-right: 0;
    padding-right: 2rem;
  }
}

.sequence-editor-content {
  .import-banners {
    margin-bottom: 1rem;
  }
  .public-copy-toolbar {
    margin: 1rem;
    text-align: right;
    p {
      float: left;
      max-width: 50%;
      line-height: 2rem;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
    a {
      vertical-align: middle;
      margin-left: 1rem;
    }
    button {
      float: none;
      vertical-align: top;
    }
    .fa-code {
      float: none;
      margin-right: 1rem;
    }
  }
  .upgrade-compare-banner {
    display: flex;
    box-shadow: 0 5px 10px -5px $translucent;
    .copy-item {
      width: 100%;
      height: 3.5rem;
      padding: 0.75rem;
      text-align: center;
      cursor: pointer;
      &:hover {
        background: var(--secondary-bg);
      }
      label {
        cursor: pointer;
      }
      .bp6-popover-wrapper {
        display: inline;
      }
      .bp6-button-text,
      p {
        display: inline-block;
        width: max-content;
        height: 2rem;
        margin-left: 0.5rem;
        padding: 5px;
        padding-top: 3px;
        border-radius: 3px;
        color: $white;
        background: $panel_blue;
        font-weight: bold;
        font-size: 1rem;
        i {
          margin-left: 0.5rem;
        }
      }
      .filter-search {
        display: inline-block;
        button {
          min-height: 0;
          height: 2rem !important;
          margin-left: 0.5rem;
          background: $panel_blue !important;
          border-radius: 3px;
          color: $white !important;
          font-weight: bold;
          font-size: 1rem !important;
        }
        .fa-caret-down {
          right: 0;
          line-height: 2.25rem;
          color: $white;
        }
        .bp6-button {
          padding-left: 0.5rem;
        }
        .bp6-button-text {
          margin-left: 0;
          padding-left: 0;
          line-height: 1.5rem;
        }
      }
      &.selected {
        border-bottom: 3px solid var(--text-color);
      }
    }
  }
}

.designer-sequence-editor-panel-content {
  padding: 0;
}

.sequence-actions-grid {
  grid-template-columns: auto auto 1fr;
  justify-items: right;
}

.sequence-editor-sections {
  .bp6-collapse {
    padding: 0 1rem;
    .bp6-collapse-body {
      padding-bottom: 1rem;
    }
  }
  .sequence-description {
    background: var(--secondary-bg);
    border-radius: 0.5rem;
    textarea {
      height: 10rem;
      padding-bottom: 2rem;
    }
    .markdown {
      padding: 1rem;
    }
    .description-editor-tools {
      .char-limit {
        font-size: 1rem;
        color: $medium_gray;
        &.over {
          color: $darkest_red;
        }
      }
    }
  }
}
/* ... */

