fix sequence panel content visibility issue

--- a/frontend/css/panels/sequences.scss
+++ b/frontend/css/panels/sequences.scss
@@ -36,7 +36,8 @@
   }
   .panel-content {
     .sequence-editor-content {
-      overflow: hidden;
+      overflow-x: hidden;
+      overflow-y: visible;
 
       @media screen and (max-width: 767px) {
         margin-left: 5px;
